feat:优化生成标题时的流畅性 前端实时更新生成的标题